--- a/css/bootstrap-emma.css
+++ b/css/bootstrap-emma.css
@@ -13,7 +13,6 @@ background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-
 
 }
 .logo{
-
 	color:#D74D8B;
 	height: 60px;
 	font-size: 36px;
@@ -27,3 +26,11 @@ background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-
 
 }
 
+.navbar-light .navbar-brand {
+  color: #D74D8B;
+}
+.navbar-light .navbar-nav .nav-link:hover,
+.dropdown-item:hover{
+	color: white;
+	background: #D74D8B;
+}
